# HyperFast

./: .gitignore  README.md  pyproject.toml  setup.cfg
data/: hapmap1_X_test.npy  hapmap1_X_train.npy  hapmap1_y_test.npy  hapmap1_y_train.npy
hyperfast/: __init__.py  config.py  hyperfast.py  model.py  utils.py
