[metadata]
name = hyperfast
author = David Bonet
author_email = davidbonetsole@gmail.com
description = HyperFast: Instant Classification for Tabular Data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AI-sandbox/hyperfast
license = CC BY-NC 4.0
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=1.26.2
    pandas>=2.1.3
    scikit-learn>=1.3.2
    torch>=1.10.2
    requests>=2.31.0